// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Gilded Rose Approval > should "Sulfuras", being a legendary item, never has to be sold or decreases in Quality 1`] = `
[
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 5,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
]
`;

exports[`Gilded Rose Approval > should foo 1`] = `
[
  Item {
    "name": "foo",
    "quality": 0,
    "sellIn": -1,
  },
]
`;

exports[`Gilded Rose Approval > should sulfaras 1`] = `
[
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 5,
    "sellIn": 0,
  },
]
`;
